# Synthronome

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BeatType.h  Callback.cpp  Callback.h  ClickPlayer.cpp  ClickPlayer.h  Mixer.cpp  Mixer.h  SoundRenderer.cpp  SoundRenderer.h  logging_macros.h  native-lib.cpp
app/src/main/java/com/one/russell/metroman_20/: MainActivity.kt  MetromanApp.kt  StartActivity.kt  StartViewModel.kt  Utils.kt
app/src/main/java/com/one/russell/synthronome/: HostActivity.kt  HostViewModel.kt  StartActivity.kt  StartViewModel.kt  (+2 more)
app/src/main/res/drawable/: background_overlay.xml  bg_bookmarks_clear_button.xml  bg_bordered_gradient_circle.xml  ic_bookmark_selected.xml  ic_bookmark_unselected.xml  ic_play.xml  ic_remove.xml  ic_scroll_left.xml  ic_scroll_right.xml  ic_settings.xml  ic_stop.xml  knob_ring.xml  knob_ring_bevel.xml  knob_ring_glow.xml
app/src/main/res/layout/: activity_main.xml  dialog_color_picker.xml  fragment_bookmarks.xml  fragment_main.xml  fragment_settings.xml  fragment_training_options.xml  fragment_training_type_selection.xml  item_training_type.xml  list_item_beat_type.xml  list_item_bookmark.xml  list_item_knob.xml  list_item_picker.xml  view_beat_types_container.xml  view_training_overlay.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
(+274 files in other folders)
